# Oubliette

./: .gitattributes  .gitignore  FEATURES.md  LICENSE  NOTICE  PLAYTEST.md  PROJECT_NOTES.md  README.md  ROADMAP.md  User_Model_Interview_Feedback_1.txt  arena.bat  bard_lab.bat  caster_lab.bat  downed_lab.bat  forge.bat  host.bat  index.html  oubliette-audio-mixer-v0.1.md  oubliette-character-sheets-v0.1.md  oubliette-combat-arena-v0.1.md  oubliette-content-pipeline-v0.1.md  oubliette-creator-tool-v0.1.md  oubliette-dm-harness-feedback-v0.1.md  oubliette-dm-harness-feedback-v0.2.md  oubliette-forge-phase4-plan-v0.1.md  oubliette-phase-c-plan-v0.1.md  oubliette-table-design-v0.1.md  oubliette-table-spec-v0.2.md  oubliette-table-v0.2-review-reply.md  package.bat  play.bat  pyproject.toml  setup.bat  vision_lab.bat
.claude/: launch.json
arena/: CombatEffectDesignDocument.md  DESIGN_DOCUMENT.md  Scenarios1-19PlayTestNotes.md  __init__.py  battlefield_editor.py  dnd_class_features_primitives.md  dnd_combat_primitives_1_5.md  dnd_combat_primitives_6_9.md  handoff.py  main.py  paths.py  requirements.txt  sim.py  stream.py
arena/ai/: __init__.py  behavior.py  context.py  controller.py  evaluation.py  executor.py  pathfinding.py  resources.py  scoring.py  tactics.py
arena/audio/: __init__.py  events.py  manager.py
arena/combat/: __init__.py  actions.py  auras.py  bardic.py  buff_effects.py  cantrip_scaling.py  chain_effects.py  compulsion.py  concentration.py  condition_effects.py  condition_immunity.py  conditions.py  counterspell.py  creature_type_bonus.py  damage.py  damage_reduction.py  death_prevention.py  death_saves.py  domination.py  events.py  forced_movement.py  forced_reroll.py  house_rules.py  hp_threshold.py  initiative.py  manager.py  movement.py  reactions.py  ready_action.py  recharge.py  recurring_actions.py  regeneration.py  riders.py  serialization.py  standard_actions.py  stat_modifiers.py  terrain_effects.py  upcast.py  wall_spells.py  zones.py
arena/data/: settings.json
arena/grid/: __init__.py  aoe_shapes.py  coordinates.py  footprint.py  hexgrid.py  line_of_sight.py  pathfinding.py  vision.py
arena/gui/: __init__.py  animation_cache.py  animation_director.py  app.py  background_slideshow.py  bardic_popup.py  button_images.py  camera.py  cantrip_popup.py  counterspell_popup.py  custom_cursor.py  grid_view.py  icons.py  items_popup.py  lair_action_editor.py  lair_action_popup.py  legendary_popup.py  oa_popup.py  passenger_popup.py  popup_base.py  radial_menu.py  reaction_popup.py  ready_popup.py  renderer.py  reroll_popup.py  rider_popup.py  settings_popup.py  shove_popup.py  smite_popup.py  spell_popup.py  tactics_popup.py  token_cache.py  tokens.py  tray_backgrounds.py  visual_effects.py
arena/models/: __init__.py  abilities.py  actions.py  character.py  conditions.py  encounter.py  feats.py  items.py  monster.py
arena/tests/: __init__.py  conftest.py  test_abilities.py  test_action_primitives.py  test_actions.py  test_ai_aoe_targeting.py  test_ai_charge_dash.py  test_ai_multiattack.py  test_ai_signature_abilities.py  test_ai_target_reach.py  test_animation_sequencing.py  test_aoe_placement.py  test_aoe_shapes.py  test_audio.py  test_auras.py  test_b5_quick_wins.py  test_banishment.py  test_bardic.py  test_bardic_popup.py  test_battlefield_editor.py  test_buff_effects.py  test_c4_primitives.py  test_cantrip_popup.py  test_cantrip_scaling.py  test_chain_effects.py  test_character.py  test_charmed_targeting.py  test_combat_actions.py  test_combat_damage.py  test_combat_events.py  test_combat_fixes.py  test_combat_manager.py  test_combat_movement.py  test_combat_serialization.py  test_compulsion.py  test_concentration_incap.py  test_condition_immunity.py  test_condition_immunity_wiring.py  test_condition_zones.py  test_conditions.py  (+108 more)
arena/util/: __init__.py  constants.py  dice.py  dnd_data.py  loader.py  monster_spells.py  settings.py
docs/: README.md  player-guide.md  remote-play.md
docs/feedback/: oubliette-dm-harness-feedback-v0.1.md
docs/roadmap/: dm-exit-interview-v09.md  oubliette-phase-d-plan-v0.1.md  (+9 more)
oubliette/: __init__.py  coin.py  difficulty.py  enums.py  schemas.py  seed.py  table.py
tests/: test_acceptance_phase0.py  test_anthropic_unwrap.py  test_arena_bridge.py  test_arena_relay.py  test_arena_testbed.py  test_attunement.py  test_authored_canon.py  test_authored_quests.py  test_b6_portrait_tokens.py  test_backgrounds_s2.py  test_bestiary_gate.py  test_c3_spell_wave.py  test_campaign_end.py  test_canon_phase3.py  test_chargen.py  test_chargen_deny.py  test_chargen_world_choice.py  test_coin.py  test_combat_arena_launch.py  test_combat_boundary_phase1.py  test_companions.py  test_content_pipeline_p1.py  test_creator_server.py  test_derive.py  test_difficulty.py  test_dm_plot_fixes.py  test_dm_prompts.py  test_dm_sheet_card.py  test_encounter_budget.py  test_end_session.py  test_environment_phase5.py  test_export_import.py  test_factions.py  test_feature_bridge.py  test_force_end_session.py  test_house_rules_story.py  test_inventory_equip.py  test_keyed_encounters.py  test_levelup.py  test_location_battles.py  (+38 more)
tools/: bake_monster_spells.py  bake_signature_priorities.py  gen_arena_monsters.py  gen_benchmark_party.py  gen_bestiary.py  gen_equipment_costs.py  gen_magic_items.py  gen_poisons.py  gen_spells.py  lab.py  vision_lab.py
voice-samples/: README.txt
(+769 files in other folders)
