[project]
name = "oubliette"
version = "0.0.1"
description = "Oubliette Table — an AI-DM text RPG where code owns state and the LLM only narrates. Phase 0 walking skeleton."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
]

[project.optional-dependencies]
# Real model play needs NO extra deps — the Anthropic adapter uses the stdlib
# (urllib). The scripted client runs fully offline. Just set ANTHROPIC_API_KEY.
web = ["fastapi>=0.110", "uvicorn>=0.29"]
dev = ["pytest>=8.0", "fastapi>=0.110", "uvicorn>=0.29", "httpx>=0.27"]

[project.scripts]
oubliette = "oubliette.app.repl:main"
oubliette-play = "oubliette.app.server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["oubliette*"]

[tool.setuptools.package-data]
# Authored content packs are data files shipped inside the package.
"oubliette.content" = ["packs/**/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
