[project]
name = "oubliette"
version = "1.0.1"
description = "Oubliette Table — an AI-DM text RPG where code owns state and the LLM only narrates."
# <3.14: pygame publishes no wheels for 3.14+ yet — a from-source build fails on
# player machines (no compiler, distutils gone). setup.bat enforces the same window.
requires-python = ">=3.11,<3.14"
dependencies = [
    "pydantic>=2.6",
]

[project.optional-dependencies]
# Real model play needs NO extra deps — the Anthropic adapter uses the stdlib
# (urllib). The scripted client runs fully offline. Just set ANTHROPIC_API_KEY.
# websockets: the persistent per-browser event channel (multiplayer S1) —
# uvicorn serves WS only when a ws library is installed.
web = ["fastapi>=0.110", "uvicorn>=0.29", "websockets>=12"]
# The Arena — the tactical combat app (launched as its own window). pillow
# encodes the multiplayer frame stream (S2); the Arena itself is pygame only.
arena = ["pygame>=2.5", "pillow>=10"]
# Voiced narration: tier 1 (Kokoro 82M on CPU) + tier 2 (Qwen3-TTS 1.7B via
# llama.cpp — `tokenizers` reads its tokenizer.json; the GGUF's own vocab is a
# dummy). Model files download separately into models/<tier>/ (setup's picker).
tts = ["kokoro-onnx>=0.4", "tokenizers>=0.15"]
dev = ["pytest>=8.0", "fastapi>=0.110", "uvicorn>=0.29", "websockets>=12",
       "httpx>=0.27", "pygame>=2.5", "pillow>=10"]

[project.scripts]
oubliette = "oubliette.app.repl:main"
oubliette-play = "oubliette.app.server:main"
oubliette-forge = "oubliette.creator.server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["oubliette*", "arena*"]
exclude = ["arena.tests*"]

[tool.setuptools.package-data]
# Authored content packs are data files shipped inside the package (incl. images).
"oubliette.content" = ["packs/**/*.json", "packs/**/*.png", "packs/**/*.jpg",
                        "packs/**/*.jpeg", "packs/**/*.webp", "packs/**/*.svg"]
# The game's single-page UI + illustrations.
"oubliette.app" = ["static/**/*"]
# The Forge's single-page UI.
"oubliette.creator" = ["static/*"]
# The house-style design tokens shared by both web UIs (served as /tokens.css).
"oubliette.ui" = ["*.css"]
# The Arena's content (monsters/characters/encounters/schemas) — JSON data files.
# Visual assets (assets/**) are intentionally NOT packaged: they're large (~100MB)
# and gitignored; they live on disk for local play.
"arena" = ["data/**/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests", "arena/tests"]
